# pages

./: pyproject.toml
pages_project/: settings.py  urls.py
